# course-sdl2

./: Makefile  Makefile.am  Makefile.in  README.md  TODO  configure  configure.ac
configs/: levels.cfg  levels.xml  menus.cfg  menus.xml
configs/levels/: level1.tmx  level1Objects.xml
demo/: Makefile
demo/configs/: playercontrolsmapping.txt
demo/src/: Enemy.cpp  Enemy.h  MainMenuState.cpp  MainMenuState.h  PauseMenuState.cpp  PauseMenuState.h  PlayState.cpp  PlayState.h  Player.cpp  Player.h  main.cpp
src/: Enemy.cpp  Enemy.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  GameObjectCollection.cpp  GameObjectCollection.h  GameObjectCreator.h  GameObjectFactory.cpp  GameObjectFactory.h  GameState.cpp  GameState.h  GameStateMachine.cpp  GameStateMachine.h  GameStateParser.cpp  GameStateParser.h  InputHandler.cpp  InputHandler.h  Layer.h  Level.cpp  Level.h  LevelParser.cpp  LevelParser.h  MainMenuState.cpp  MainMenuState.h  MenuButton.cpp  MenuButton.h  MenuState.cpp  MenuState.h  NoJoystickState.cpp  NoJoystickState.h  ObjectLayer.cpp  ObjectLayer.h  PauseMenuState.cpp  PauseMenuState.h  PlayState.cpp  PlayState.h  Player.cpp  Player.h  (+17 more)
